[gd_scene load_steps=2 format=3 uid="uid://b1i4r5ap1ldxm"]

[ext_resource type="Script" path="res://src/scripts/menu.gd" id="1_g56hd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g56hd")

[node name="MenuCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="MenuCanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.5
offset_top = 223.495
offset_right = 99.5
offset_bottom = 246.495
grow_horizontal = 2
text = "Battle for Metamorphosis"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MenuCanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="MenuCanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="UpgradesButton" type="Button" parent="MenuCanvasLayer"]
offset_left = 919.0
offset_top = 372.025
offset_right = 1001.0
offset_bottom = 403.025
text = "Upgrades"

[node name="UpgradesCanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradesCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="HealthHBoxContainer" type="HBoxContainer" parent="UpgradesCanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HealthUpgradeButton" type="Button" parent="UpgradesCanvasLayer/VBoxContainer/HealthHBoxContainer"]
layout_mode = 2
text = "Health
"

[node name="Cost" type="Label" parent="UpgradesCanvasLayer/VBoxContainer/HealthHBoxContainer"]
layout_mode = 2
text = "100"

[node name="AttackDamageHBoxContainer" type="HBoxContainer" parent="UpgradesCanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="AttackDamageButton" type="Button" parent="UpgradesCanvasLayer/VBoxContainer/AttackDamageHBoxContainer"]
layout_mode = 2
text = "Damage
"

[node name="Cost" type="Label" parent="UpgradesCanvasLayer/VBoxContainer/AttackDamageHBoxContainer"]
layout_mode = 2
text = "500"

[node name="AttackSpeedHBoxContainer" type="HBoxContainer" parent="UpgradesCanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="AttackSpeedButton" type="Button" parent="UpgradesCanvasLayer/VBoxContainer/AttackSpeedHBoxContainer"]
layout_mode = 2
text = "Attack Speed
"

[node name="Cost" type="Label" parent="UpgradesCanvasLayer/VBoxContainer/AttackSpeedHBoxContainer"]
layout_mode = 2
text = "1000"

[node name="Label" type="Label" parent="UpgradesCanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = 109.625
offset_right = 37.0
offset_bottom = 132.625
grow_horizontal = 2
text = "Upgrades"

[node name="BackButton" type="Button" parent="UpgradesCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -183.315
offset_right = 22.5
offset_bottom = -152.315
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="LeavesHBoxContainer" type="HBoxContainer" parent="UpgradesCanvasLayer"]
offset_left = 906.0
offset_top = 264.0
offset_right = 1015.0
offset_bottom = 287.0
alignment = 1

[node name="Label" type="Label" parent="UpgradesCanvasLayer/LeavesHBoxContainer"]
layout_mode = 2
text = "Leaves:  "

[node name="LeavesOwnedLabelLabel" type="Label" parent="UpgradesCanvasLayer/LeavesHBoxContainer"]
layout_mode = 2
text = "0"

[connection signal="pressed" from="MenuCanvasLayer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="UpgradesCanvasLayer/VBoxContainer/HealthHBoxContainer/HealthUpgradeButton" to="." method="_on_health_upgrade_button_pressed"]
[connection signal="pressed" from="UpgradesCanvasLayer/VBoxContainer/AttackDamageHBoxContainer/AttackDamageButton" to="." method="_on_attack_damage_button_pressed"]
[connection signal="pressed" from="UpgradesCanvasLayer/VBoxContainer/AttackSpeedHBoxContainer/AttackSpeedButton" to="." method="_on_attack_speed_button_pressed"]
[connection signal="pressed" from="UpgradesCanvasLayer/BackButton" to="." method="_on_upgrade_back_button_pressed"]
